# SPORTBAZA-IronFLow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
bot/: __init__.py  config.py  main.py  validators.py
bot/api/: achievements.py  auth.py  routes.py
bot/handlers/: __init__.py  athlete.py  athlete_weights.py  common.py  fallback.py  records.py  registration.py
bot/handlers/admin/: __init__.py  analytics.py  export.py  formula.py  panel.py  qr_scanner.py  scoring.py  tournament.py
bot/keyboards/: __init__.py  admin_kb.py  athlete_weights_kb.py  callbacks.py  main_menu.py  records_kb.py  registration_kb.py  scoring_kb.py
bot/middlewares/: __init__.py  auth_middleware.py  db_middleware.py  rate_limit_middleware.py
bot/models/: __init__.py  base.py  models.py
bot/services/: __init__.py  analytics_service.py  formula_service.py  notification_service.py  qr_service.py  ranking_service.py  records_service.py  sheets_service.py  tournament_service.py
bot/states/: __init__.py  admin_states.py  registration_states.py
migrations/: env.py
migrations/versions/: 001_iron_flow_v2.py  002_opening_weight.py
tests/: conftest.py  test_achievements.py  test_calculators.py  test_database.py  test_ranking.py  test_validators.py
webapp/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
webapp/src/: App.tsx  index.css
webapp/src/components/: BottomNav.tsx  BottomSheet.tsx  RingProgress.tsx
webapp/src/data/: mock.ts
webapp/src/hooks/: useTelegram.ts
(+9 files in other folders)
