[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sportbaza"
version = "2.0.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[tool.coverage.run]
source = ["bot"]
omit   = ["bot/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
